[package]
name = "aws_e2b"
version = "0.1.0"
edition = "2021"
description = "CLI to build e2b templates and push base images to AWS ECR"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/leap/leap_server"
repository = "https://github.com/leap/leap_server"
keywords = ["e2b", "aws", "ecr", "cli", "templates"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "6.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
toml = "0.8"
openssl = { version = "0.10", features = ["vendored"] }
# Additional AWS SDK, Docker API, and async-related dependencies
aws-config = "1.5"
aws-sdk-sts = "1.28"
aws-sdk-ecr = "1.38"
base64 = "0.22"
bytes = "1.6"
bollard = "0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11"
xshell = "0.2"
